force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/CHANNEL_ORDERS__Service_Order_Detail__c.object-meta.xml
<CustomObject>
    <label>Service Order Detail</label>
    <nameField>
        <displayFormat>SOD-{0000000000}</displayFormat>
        <label>Service Order Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Order Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>