force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Application__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Application__c</fullName>
    <description>Field retired in Channel Order App v2.0</description>
    <label>App (deprecated)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>