force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Current_Licenses__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Current_Licenses__c</fullName>
    <description>For internal use by Salesforce. Represents the total number of product licenses assigned to the customer. This field populates with data only for orders created in Channel Order App v2.0 or later.</description>
    <inlineHelpText>The total number of licenses that customer currently has on that product</inlineHelpText>
    <label>Current Licenses (internal use only)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>