force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Current_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Current_Total_Price__c</fullName>
    <description>For internal use by Salesforce. Represents the total value of the customer&apos;s active orders for the product. This field populates with data only for orders created in Channel Order App v2.0 or later.</description>
    <inlineHelpText>Sum of total price across all orders</inlineHelpText>
    <label>Current Total Price (internal use only)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>