force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Customer_Price_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_Price_Per_Month__c</fullName>
    <description>Price per unit per month. Required for PNR products.</description>
    <label>Customer Price (Unit/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>