force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Floor_Price__c</fullName>
    <description>Field retired in Channel Order App v2.0.</description>
    <formula>if( CHANNEL_ORDERS__Pricing_Type__c = &quot;FIXED&quot;, &quot; &quot;,

if (round(CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Floor_Price__c,0) = CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Floor_Price__c, text(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Default_Contract_Currency__c) &amp; &quot; &quot; &amp; text(CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Floor_Price__c) &amp; &quot;.00&quot;,

text(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Default_Contract_Currency__c) &amp; &quot; &quot; &amp; text(CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Floor_Price__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Price (deprecated)</label>
    <type>Text</type>
</CustomField>