force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Is_Expired__c</fullName>
    <description>Whether the product&apos;s contract is expired. For example, due to a cancellation or the contract expiring.</description>
    <formula>IF( TEXT(CHANNEL_ORDERS__pc_Contract_Auto_Renew__c) = &apos;Yes&apos;, false, IF( 
DATE (
/*YEAR*/
YEAR(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Start_Date__c) + FLOOR((MONTH(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Start_Date__c) + CHANNEL_ORDERS__pc_Contract_Length__c - 1)/12),
/*MONTH*/
CASE(MOD(MONTH(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Start_Date__c) + CHANNEL_ORDERS__pc_Contract_Length__c, 12), 0, 12, MOD(MONTH(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Start_Date__c) + CHANNEL_ORDERS__pc_Contract_Length__c, 12)),
/*DAY*/
MIN(DAY(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Start_Date__c), CASE(MOD(MONTH(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Start_Date__c) + CHANNEL_ORDERS__pc_Contract_Length__c, 12), 9, 30, 4, 30, 6, 30, 11, 30, 2,
/* return max days for february dependent on if end date is leap year */
IF(MOD(YEAR(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Start_Date__c) + FLOOR((MONTH(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Start_Date__c) + CHANNEL_ORDERS__pc_Contract_Length__c)/12), 400) = 0 || (MOD(YEAR(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Start_Date__c) + FLOOR((MONTH(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Start_Date__c) + 
CHANNEL_ORDERS__pc_Contract_Length__c)/12), 4) = 0 &amp;&amp; MOD(YEAR(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Start_Date__c) + FLOOR((MONTH(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Start_Date__c) + CHANNEL_ORDERS__pc_Contract_Length__c)/12), 100) &lt;&gt; 0), 29, 28), 31)) 
)  &lt;  TODAY()  , true, false ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>