force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Number_Of_Users_ISVforce__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Number_Of_Users_ISVforce__c</fullName>
    <description>Field retired in Channel Order App v2.0</description>
    <label># of users (ISVforce) (deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>