force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Partner_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Partner_Contract_Term__c</fullName>
    <description>Name of the contract from the contract terms associated with the order.</description>
    <formula>CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Contract Term Name</label>
    <type>Text</type>
</CustomField>