force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Partner_Order__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Partner_Order__c</fullName>
    <description>Lookup to the related service order.</description>
    <label>Service Order</label>
    <referenceTo>CHANNEL_ORDERS__Service_Order__c</referenceTo>
    <relationshipLabel>Service Order Detail</relationshipLabel>
    <relationshipName>Partner_Order_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>