force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__pc_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__pc_Billing_Frequency__c</fullName>
    <description>How often the customer is billed per year. The value must match your Salesforce contract, unless you’ve been granted override permissions.</description>
    <label>Billing Frequency</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>