force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__pc_Contract_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__pc_Contract_Auto_Renew__c</fullName>
    <description>Whether the contract automatically renews at the end of the term. The value must match your Salesforce contract, unless you’ve been granted override permissions.</description>
    <label>Contract Auto Renew</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>