force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__pc_Custom_Unit__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__pc_Custom_Unit__c</fullName>
    <description>Custom unit value for products with custom pricing.</description>
    <label>Custom Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>