force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__pc_Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__pc_Fixed_Price__c</fullName>
    <description>Fixed price of the product at the time the order was created. This field must be explicitly set when using the API.</description>
    <label>Fixed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>