force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__pc_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__pc_Product_ID__c</fullName>
    <description>Field retired in Channel Order App v2.0. Use CHANNEL_ORDERS__Product_ID__c instead.</description>
    <label>Product ID (deprecated)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>