force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__PNR__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__PNR__c</fullName>
    <description>Percent net revenue of the product at the time the order was created. This field must be explicitly set when using the API.</description>
    <formula>CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__PNR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PNR %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>