force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Pricing_Type__c</fullName>
    <description>Field retired in Channel Order App v2.0. Use CHANNEL_ORDERS__pc_Pricing_Type__c instead.</description>
    <formula>TEXT(CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Pricing_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Type (deprecated)</label>
    <type>Text</type>
</CustomField>