force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Product_ID__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Product_ID__c</fullName>
    <description>ID of the product.</description>
    <formula>CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Product_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID</label>
    <type>Text</type>
</CustomField>