force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Product_Line_Desc_Overridden__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Product_Line_Desc_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field retired in Channel Order App v2.0.</description>
    <inlineHelpText>True if this detail uses an individual description rather than using SFDC Invoice Description</inlineHelpText>
    <label>Prod Line Desc Overridden (deprecated)</label>
    <type>Checkbox</type>
</CustomField>