force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Product_Name__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related product catalog.</description>
    <label>Product</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>CHANNEL_ORDERS__Partner_Product_Catalog__c.CreatedDate</field>
            <operation>greaterThan</operation>
            <value>1/1/1900 9:50 AM</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CHANNEL_ORDERS__Partner_Product_Catalog__c</referenceTo>
    <relationshipLabel>Service Order Detail</relationshipLabel>
    <relationshipName>Product_Name</relationshipName>
    <type>Lookup</type>
</CustomField>