force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Quantity__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Quantity__c</fullName>
    <description>Number of product catalogs on the service order.</description>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>