force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__SFDC_Price__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__SFDC_Price__c</fullName>
    <description>Amount due to Salesforce for the line item as determined by your contract.</description>
    <inlineHelpText>The amount to be paid to Salesforce. Based off the % fee paid to Salesforce as specified in the Contract</inlineHelpText>
    <label>Revenue Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>