force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Special_Instructions__c</fullName>
    <description>Field retired in Channel Order App v2.0.</description>
    <label>Special Instructions (deprecated)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>