force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/validationRules/CHANNEL_ORDERS__CancellationTerms_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__CancellationTerms_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( CHANNEL_ORDERS__pc_Partner_Contract_Term__r.CHANNEL_ORDERS__Allow_Cancellation_Terms_Override__c,    ISBLANK(CHANNEL_ORDERS__pc_Cancellation_Terms__c)  )</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__pc_Cancellation_Terms__c</errorDisplayField>
    <errorMessage>Cancellation Terms is a required field.</errorMessage>
</ValidationRule>