force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/validationRules/CHANNEL_ORDERS__ContractLength_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__ContractLength_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  CHANNEL_ORDERS__pc_Partner_Contract_Term__r.CHANNEL_ORDERS__Allow_Contract_Length_Override__c , ISBLANK( CHANNEL_ORDERS__pc_Contract_Length__c ) )</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__pc_Contract_Length__c</errorDisplayField>
    <errorMessage>Contract Length is a required field.</errorMessage>
</ValidationRule>