force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/validationRules/CHANNEL_ORDERS__Customer_Price_is_required_if_PNR.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__Customer_Price_is_required_if_PNR</fullName>
    <active>false</active>
    <description>Deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Customer_Price__c</errorDisplayField>
    <errorMessage>(deprecated)</errorMessage>
</ValidationRule>