force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/validationRules/CHANNEL_ORDERS__ISVForce_Customer_Price_per_month_reqd.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__ISVForce_Customer_Price_per_month_reqd</fullName>
    <active>false</active>
    <description>Deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Customer_Price_Per_Month__c</errorDisplayField>
    <errorMessage>(deprecated)</errorMessage>
</ValidationRule>