force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/validationRules/CHANNEL_ORDERS__ISVForce_num_users_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__ISVForce_num_users_is_required</fullName>
    <active>false</active>
    <description>Deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Number_Of_Users_ISVforce__c</errorDisplayField>
    <errorMessage>(deprecated)</errorMessage>
</ValidationRule>