force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/validationRules/CHANNEL_ORDERS__Product_must_belong_to_contract_terms.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__Product_must_belong_to_contract_terms</fullName>
    <active>true</active>
    <errorConditionFormula>CHANNEL_ORDERS__Partner_Contract_Term__c &lt;&gt;  CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Partner_Contract_Terms__r.Name</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Product_Name__c</errorDisplayField>
    <errorMessage>The Product you selected is not part of the Contract Term you chose on the Service Order</errorMessage>
</ValidationRule>