force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/validationRules/CHANNEL_ORDERS__Special_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__Special_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISCHANGED(CHANNEL_ORDERS__Special_Instructions__c ), ISCHANGED( CHANNEL_ORDERS__Product_Special_Terms__c )) ,Text(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Order_Status__c)  !=  &apos;Draft&apos;,Text(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Order_Status__c)  !=  &apos;Error&apos;)</errorConditionFormula>
    <errorMessage>Field can not be updated. Service Order status should be: &apos;Error&apos; or &apos;Draft&apos;</errorMessage>
</ValidationRule>