force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/listViews/CHANNEL_ORDERS__All.listView-meta.xml
<ListView>
    <fullName>CHANNEL_ORDERS__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>